# Chats-empty-repo

./: .gitignore  BUSINESS_MODEL.md  CHANGELOG.md  COMMIT_GOAL.md  DECISIONS.md  DISTRIBUTION.md  LICENSE  PROJECT_STATE.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  release-requirements.txt
.github/ISSUE_TEMPLATE/: founding-team-pilot.yml
.openai/: hosting.json
app/: campaign-source.ts  globals.css  layout.tsx  page.tsx  repo-scout-page.tsx  site-config.ts  sitemap.ts  structured-data.ts
docs/: direct-outreach.md  github-actions.md  pilot-rollout.md  pilot-tracking.md  policy-starters.md  releases.md
examples/: outreach-ledger.csv  pilot-delivery-record.md  team-policy-v3.toml  team-policy-v4.toml  team-policy.toml
metrics/: README.md  distribution-baseline.json  github-traffic-baseline.json  growth-baseline.json  outreach-draft-baseline.json  pilot-baseline.json
scripts/: audit_action_pins.py  audit_pilot_labels.py  audit_production_site.py  build_zipapp.py  compare_wheel_contents.py  prepare_release.py  smoke_test_node_starter.py  smoke_test_outreach_lifecycle.py  smoke_test_pilot_funnel.py  smoke_test_policy_activation.py  smoke_test_rollout_summary.py  update_release_pin.py
tests/: dependency-compatibility.test.mjs  rendered-html.test.mjs  test_action_pin_audit.py  test_ci_examples.py  test_cli.py  test_comparison.py  test_dependabot_contract.py  test_distribution.py  test_growth.py  test_metrics_baseline.py  test_outreach.py  test_outreach_contract.py  test_pilot_delivery_contract.py  test_pilot_funnel.py  test_pilot_intake_workflow.py  test_pilot_label_audit.py  test_policy.py  test_policy_templates.py  test_production_site_audit.py  test_production_site_workflow.py  test_release.py  test_release_tooling_workflow.py  test_rollout_summary.py  test_scanner.py  test_site_dependency_workflow.py  test_update_release_pin.py  test_version.py
(+29 files in other folders)
