[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-scout"
version = "0.2.7"
description = "A local CLI that summarizes repository health and handoff context."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Repo Scout contributors" }
]
license = "MIT"
keywords = ["cli", "developer-tools", "repository", "handoff"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]

[project.scripts]
repo-scout = "repo_scout.cli:main"
repo-scout-pilot = "repo_scout.pilot_funnel:main"
repo-scout-policy = "repo_scout.policy_templates:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_scout = ["templates/policies/*.toml"]
